tests/ui/const-generics/generic_const_exprs/const-block-is-poly.stderr
error: overly complex generic constant
  --> $DIR/const-block-is-poly.rs:4:19
   |
LL |     let _ = [0u8; { const { std::mem::size_of::<T>() } }];
   |                   ^^----------------------------------^^
   |                     |
   |                     const blocks are not supported in generic constants
   |
   = help: consider moving this anonymous constant into a `const` function
   = note: this operation may be supported in the future

error: aborting due to 1 previous error

